testing/macro-tests/tests/ui/store_duplicate_storage.stderr
error: store(...) accepts only one storage(...) argument
  --> tests/ui/store_duplicate_storage.rs:16:5
   |
16 |     storage(journaled(
   |     ^^^^^^^
